# CVProject

./: .gitignore  colab.ipynb  pyproject.toml
CVProject/: annotator.py  colab.ipynb  dataset.py  demo.py  demo_pca.py  image_embedding.py  lambda_layer.py  pos_enc.py  vit.py  vqvae.py
docs/: README.md  references.bib
