[project]
name = "CVProject"
version = "0.1.0"
description = "A Python project"
dependencies = [ "torch", "torchvision", "pandas", "tiktoken", "tqdm", "matplotlib", "vector_quantize_pytorch", "vector_quantize_pytorch",]
[[project.authors]]
name = "Ettore Ricci"
email = "ettore.ricci.coding@gmail.com"

[build-system]
requires = [ "setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project.license]
file = "LICENSE"

[tool.setuptools.package-dir]
CVProject = "CVProject"
